// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PropertyDefsConsumer property updates should only write the first seen property defs to the DB 1`] = `
[
  {
    "group_type_index": null,
    "id": "<REPLACED-UUID-0>",
    "is_numerical": false,
    "name": "url",
    "project_id": "2",
    "property_type": "String",
    "property_type_format": null,
    "query_usage_30_day": null,
    "team_id": 2,
    "type": 1,
    "volume_30_day": null,
  },
]
`;

exports[`PropertyDefsConsumer property updates should write simple property defs to the DB 1`] = `
[
  {
    "created_at": "2025-01-01T01:00:00.000Z",
    "id": "<REPLACED-UUID-0>",
    "last_seen_at": "2025-01-01T01:00:00.000Z",
    "name": "$pageview",
    "project_id": "2",
    "query_usage_30_day": null,
    "team_id": 2,
    "volume_30_day": null,
  },
]
`;

exports[`PropertyDefsConsumer property updates should write simple property defs to the DB 2`] = `
[
  {
    "event": "$pageview",
    "id": "<REPLACED_NUMBER>",
    "project_id": "2",
    "property": "url",
    "team_id": 2,
  },
]
`;

exports[`PropertyDefsConsumer property updates should write simple property defs to the DB 3`] = `
[
  {
    "group_type_index": null,
    "id": "<REPLACED-UUID-0>",
    "is_numerical": false,
    "name": "url",
    "project_id": "2",
    "property_type": "String",
    "property_type_format": null,
    "query_usage_30_day": null,
    "team_id": 2,
    "type": 1,
    "volume_30_day": null,
  },
]
`;
